fix(SCS-482): Implement profile view permissions (#491)
* fix: removed unnecessary sections in profile for student and fixed undefined in breadcrumbs

* fix: removed unnecessary sections in profile for student and fixed undefined in breadcrumbs

* fix: changed link to profile page in view course author

* fix: fix the getUserDetails endpoint, refactored teacher page to general profile page, cleaned up the profile page

* fix: added util function for role in frontend and cleaned it up

* fix: fixed getUserDetails endpoint, now it never returns undefined, also made conditional rendering in profile and fixed the breadcrumbs

* WIP

* WIP

* fix: student cannot now view other students profiles, implemented api e2e tests and web unit test for my changes

* fix: changed role in user schema to Type.String()

* fix: fixed stuff from feedback
