# apps/api/src/swagger/api-schema.json
@@ -3175,6 +3175,16 @@
                     "type": "null"
                   }
                 ]
+              },
+              "role": {
+                "anyOf": [
+                  {
+                    "type": "string"
+                  },
+                  {
+                    "type": "null"
+                  }
+                ]
               }
             },
             "required": [
@@ -3184,7 +3194,8 @@
               "description",
               "contactEmail",
               "contactPhone",
-              "jobTitle"
+              "jobTitle",
+              "role"
             ]
           }
         },
